--- a/ansible-gql/init-routing-bgp.yml
+++ b/ansible-gql/init-routing-bgp.yml
@@ -1,5 +1,5 @@
 ---
-- name: Configure Routing on SWITCH1
+- name: Configure BGP on SWITCH1
   hosts: SWITCH1
   gather_facts: no
   connection: network_cli
@@ -8,7 +8,7 @@
 
 
   tasks:
-    - name: Configure Routing on Ethernet1 and Ethernet2
+    - name: Create Ethernet1 and Ethernet2 Internal Interfaces
       arista.eos.eos_interfaces:
         config:
           - name: Ethernet1
@@ -18,7 +18,7 @@
             enabled: true
             mode: layer3
 
-    - name: Configure Loopback Interfaces 1-3, Ethernet1-2 on SWITCH1
+    - name: Configure Loopback Interfaces 1-3, Ethernet 1-2 IP Addresses on SWITCH1
       eos_l3_interfaces:
         config:
           - name: Loopback1
@@ -62,7 +62,7 @@
 
 ###############################################################################################              
 
-- name: Configure Routing on SWITCH2
+- name: Configure BGP on SWITCH2
   hosts: SWITCH2
   gather_facts: no
   connection: network_cli
@@ -71,7 +71,7 @@
 
 
   tasks:
-    - name: Configure Routing on Ethernet1 and Ethernet2
+    - name: Create Ethernet1 and Ethernet2 Internal Interfaces
       arista.eos.eos_interfaces:
         config:
           - name: Ethernet1
@@ -81,7 +81,7 @@
             enabled: true
             mode: layer3
 
-    - name: Configure Loopback interfaces 4-6, Ethernet1-2 on SWITCH2
+    - name: Configure Loopback Interfaces 4-6, Ethernet 1-2 IP Addresses on SWITCH2
       eos_l3_interfaces:
         config:
           - name: Loopback4
@@ -124,7 +124,7 @@
 
 ########################################################
 
-- name: Configure Routing on SWITCH3
+- name: Configure BGP on SWITCH3
   hosts: SWITCH3
   gather_facts: no
   connection: network_cli
@@ -133,7 +133,7 @@
 
 
   tasks:
-    - name: Configure Routing on Ethernet1 and Ethernet2
+    - name: Create Ethernet1 and Ethernet2 Internal Interfaces
       arista.eos.eos_interfaces:
         config:
           - name: Ethernet1
@@ -143,7 +143,7 @@
             enabled: true
             mode: layer3
 
-    - name: Configure Loopback interfaces 7-9, Ethernet1-2 on SWITCH3
+    - name: Configure Loopback Interfaces 7-9, Ethernet 1-2 IP Addresses on SWITCH3
       eos_l3_interfaces:
         config:
           - name: Loopback7
