--- a/ansible-gql/init-prometheus.yml
+++ b/ansible-gql/init-prometheus.yml
@@ -5,41 +5,134 @@
   vars:
     ansible_network_os: eos
   tasks:
+    - name: Copy Prometheus Configuration Files to SWITCH1 (1/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
+    - name: Copy Prometheus Configuration Files to SWITCH1 (2/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
     - name: Create ACL
-      arista.eos.eos_acls:
-        config:
-          - afi: ipv4
-            acls:
-              - name: capstone
-                standard: false
-                aces:
-                  - sequence: 10
-                    grant: permit
-                    protocol: ip
-                    source:
-                      any: true
-                    destination:
-                      any: true
-                  - sequence: 20
-                    grant: permit
-                    protocol: tcp
-                    source:
-                      any: true
-                    destination:
-                      any: true
-                  - sequence: 30
-                    grant: permit
-                    protocol: tcp
-                    source:
-                      any: true
-                    destination:
-                      any: true
-                      # dport: 8080 fix port later
-                  - sequence: 40
-                    grant: permit
-                    protocol: tcp
-                    source:
-                      any: true
-                    destination:
-                      any: true
-                      # dport: 6042 fix port later
+      arista.eos.eos_config:
+        lines:
+          - permit ip any any
+          - permit tcp any any
+          - permit tcp any any eq 8080
+          - permit tcp any any eq 6042
+        parents: ip access-list capstone
+
+    - name: Initialize Prometheus Daemon on SWITCH1
+      arista.eos.eos_command:
+        commands:
+          - command: configure terminal
+          - command: system control-plane
+          - command: ip access-group capstone in
+          - command: ip access-group capstone vrf MGMT in
+          - command: daemon TerminAttr
+          - command: exec /usr/bin/TerminAttr -disableaaa -grpcaddr MGMT/127.0.0.1:6042
+          - command: no shutdown
+          - command: daemon ocprometheus
+          - command: exec /sbin/ip netns exec ns-MGMT /mnt/flash/ocprometheus
+              -config /mnt/flash/ocprometheus.yml -addr localhost:6042 -username admin -password admin
+          - command: no shutdown
+
+########################################################################################
+
+- name: Configure Prometheus on SWITCH2
+  hosts: SWITCH2
+  gather_facts: false
+  connection: network_cli
+  vars:
+    ansible_network_os: eos
+  tasks:
+    - name: Copy Prometheus Configuration Files to SWITCH2 (1/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
+    - name: Copy Prometheus Configuration Files to SWITCH2 (2/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
+    - name: Create ACL
+      arista.eos.eos_config:
+        lines:
+          - permit ip any any
+          - permit tcp any any
+          - permit tcp any any eq 8080
+          - permit tcp any any eq 6042
+        parents: ip access-list capstone
+
+    - name: Initialize Prometheus Daemon on SWITCH2
+      arista.eos.eos_command:
+        commands:
+          - command: configure terminal
+          - command: system control-plane
+          - command: ip access-group capstone in
+          - command: ip access-group capstone vrf MGMT in
+          - command: daemon TerminAttr
+          - command: exec /usr/bin/TerminAttr -disableaaa -grpcaddr MGMT/127.0.0.1:6042
+          - command: no shutdown
+          - command: daemon ocprometheus
+          - command: exec /sbin/ip netns exec ns-MGMT /mnt/flash/ocprometheus
+              -config /mnt/flash/ocprometheus.yml -addr localhost:6042 -username admin -password admin
+          - command: no shutdown
+
+########################################################################################
+
+- name: Configure Prometheus on SWITCH3
+  hosts: SWITCH3
+  gather_facts: false
+  connection: network_cli
+  vars:
+    ansible_network_os: eos
+  tasks:
+    - name: Copy Prometheus Configuration Files to SWITCH3 (1/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
+    - name: Copy Prometheus Configuration Files to SWITCH3 (2/2)
+      ansible.builtin.copy:
+        src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
+        dest: /mnt/flash/
+        mode: '0777'
+        group: root
+
+    - name: Create ACL
+      arista.eos.eos_config:
+        lines:
+          - permit ip any any
+          - permit tcp any any
+          - permit tcp any any eq 8080
+          - permit tcp any any eq 6042
+        parents: ip access-list capstone
+
+    - name: Initialize Prometheus Daemon on SWITCH3
+      arista.eos.eos_command:
+        commands:
+          - command: configure terminal
+          - command: system control-plane
+          - command: ip access-group capstone in
+          - command: ip access-group capstone vrf MGMT in
+          - command: daemon TerminAttr
+          - command: exec /usr/bin/TerminAttr -disableaaa -grpcaddr MGMT/127.0.0.1:6042
+          - command: no shutdown
+          - command: daemon ocprometheus
+          - command: exec /sbin/ip netns exec ns-MGMT /mnt/flash/ocprometheus
+              -config /mnt/flash/ocprometheus.yml -addr localhost:6042 -username admin -password admin
+          - command: no shutdown
