--- a/ansible-gql/init-routing-bgp.yml
+++ b/ansible-gql/init-routing-bgp.yml
@@ -65,6 +65,8 @@
             - address: 192.168.1.0/24
             - address: 192.168.2.0/24
             - address: 192.168.3.0/24
+            - address: 192.168.10.0/30
+            - address: 192.168.11.0/30
 #######################################################################################################
 - name: Configure BGP on SWITCH2
   hosts: SWITCH2
@@ -133,6 +135,8 @@
             - address: 192.168.4.0/24
             - address: 192.168.5.0/24
             - address: 192.168.6.0/24
+            - address: 192.168.10.0/30
+            - address: 192.168.12.0/30
 #######################################################################################################
 - name: Configure BGP on SWITCH3
   hosts: SWITCH3
@@ -201,3 +205,5 @@
             - address: 192.168.7.0/24
             - address: 192.168.8.0/24
             - address: 192.168.9.0/24
+            - address: 192.168.11.0/30
+            - address: 192.168.12.0/30
