--- a/ansible-gql/init-prometheus.yml
+++ b/ansible-gql/init-prometheus.yml
@@ -16,14 +16,14 @@
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Copy Prometheus Configuration Files to SWITCH1 (2/2)
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Create ACL
@@ -70,14 +70,14 @@
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Copy Prometheus Configuration Files to SWITCH2 (2/2)
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Create ACL
@@ -124,14 +124,14 @@
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Copy Prometheus Configuration Files to SWITCH3 (2/2)
       ansible.builtin.copy:
         src: /home/ubuntu/Desktop/ansible-gql/prometheus/ocprometheus.yml
         dest: /mnt/flash/
-        mode: '0777'
+        mode: "777"
         group: root
 
     - name: Create ACL
